[gd_scene load_steps=9 format=2]

[ext_resource path="res://Import/1. Free Hologram Interface Wenrexa/Card X3/Card X5.png" type="Texture" id=1]
[ext_resource path="res://Import/1. Free Hologram Interface Wenrexa/Card X1/Card X1.png" type="Texture" id=2]
[ext_resource path="res://Import/1. Free Hologram Interface Wenrexa/Button 1/Button Hover.png" type="Texture" id=3]
[ext_resource path="res://Import/1. Free Hologram Interface Wenrexa/Button 1/Button Disable.png" type="Texture" id=4]
[ext_resource path="res://Import/1. Free Hologram Interface Wenrexa/Button 1/Button Active.png" type="Texture" id=5]
[ext_resource path="res://Import/1. Free Hologram Interface Wenrexa/Button 1/Button Normal.png" type="Texture" id=6]
[ext_resource path="res://Scenes/MainScene.gd" type="Script" id=7]
[ext_resource path="res://Import/1. Free Hologram Interface Wenrexa/Icons/03.png" type="Texture" id=8]

[node name="MainScene" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="TaskPanel" type="TextureRect" parent="."]
margin_left = 106.0
margin_top = 118.0
margin_right = 511.0
margin_bottom = 768.0
texture = ExtResource( 2 )
expand = true

[node name="Time" type="Label" parent="TaskPanel"]
margin_left = 94.0
margin_top = 144.0
margin_right = 206.0
margin_bottom = 158.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_outline_modulate = Color( 0.47451, 0.960784, 0.854902, 1 )
text = "Time: 2025.01.23"
align = 1

[node name="Task#0612" type="Label" parent="TaskPanel"]
margin_left = 60.0
margin_top = 33.0
margin_right = 116.0
margin_bottom = 47.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_outline_modulate = Color( 0.47451, 0.960784, 0.854902, 1 )
text = "#0612"
align = 1

[node name="DetailButton" type="TextureButton" parent="TaskPanel"]
margin_left = 61.0
margin_top = 518.0
margin_right = 347.0
margin_bottom = 602.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="detail" type="Label" parent="TaskPanel/DetailButton"]
margin_left = 21.0
margin_top = 18.0
margin_right = 82.0
margin_bottom = 32.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Details"
align = 1

[node name="Taskdetail" type="TextureRect" parent="."]
visible = false
margin_left = 212.0
margin_top = 236.0
margin_right = 1703.0
margin_bottom = 886.0
texture = ExtResource( 2 )
expand = true

[node name="TextEdit" type="TextEdit" parent="Taskdetail"]
margin_left = 153.0
margin_top = 192.0
margin_right = 1306.0
margin_bottom = 476.0
text = "Tian Xiaoling
Location: In the alley on the way home
Method: Multiple fatal stab wounds, posthumously flogged and subsequently dismembered.
Found in: Trash can
Difficulty: The murderer is masked and cannot be identified."

[node name="Time" type="Label" parent="Taskdetail"]
margin_left = 149.0
margin_top = 131.0
margin_right = 261.0
margin_bottom = 145.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_outline_modulate = Color( 0.47451, 0.960784, 0.854902, 1 )
text = "Time: 2025.01.23"
align = 1

[node name="Task#0612" type="Label" parent="Taskdetail"]
margin_left = 612.0
margin_top = 32.0
margin_right = 668.0
margin_bottom = 46.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_outline_modulate = Color( 0.47451, 0.960784, 0.854902, 1 )
text = "#0612"
align = 1

[node name="TextureButton" type="TextureButton" parent="Taskdetail"]
margin_left = 536.0
margin_top = 503.0
margin_right = 928.0
margin_bottom = 601.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="Start" type="Label" parent="Taskdetail/TextureButton"]
margin_left = 47.0
margin_top = 18.0
margin_right = 108.0
margin_bottom = 32.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Start Task"
align = 1

[node name="BackButton" type="TextureButton" parent="Taskdetail"]
margin_left = 1364.0
margin_top = -15.0
margin_right = 1437.0
margin_bottom = 54.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Taskdetail/BackButton"]
margin_left = 17.0
margin_top = 14.0
margin_right = 57.0
margin_bottom = 54.0
texture = ExtResource( 8 )
expand = true

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 1372.0
margin_top = 86.0
margin_right = 1428.0
margin_bottom = 100.0
rect_scale = Vector2( 8, 8 )
custom_colors/font_outline_modulate = Color( 0.47451, 0.960784, 0.854902, 1 )
text = "00:00:00"

[connection signal="pressed" from="TaskPanel/DetailButton" to="." method="_on_DetailButton_pressed"]
[connection signal="pressed" from="Taskdetail/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Taskdetail/BackButton" to="." method="_on_BackButton_pressed"]
